--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniVerse">
         <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+            android:name=".RegisterUser"
+            android:exported="false" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".LoginUser"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
