--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniVerse">
         <activity
-            android:name=".MainActivity"
+            android:name=".Interests_Selection"
             android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
