--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.universe">
-    
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,20 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniVerse">
         <activity
-            android:name=".Feed"
+            android:name=".RegisterStudentInfo"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ForgotPassword"
+            android:exported="false" />
+        <activity
+            android:name=".PlaceHolderFeed"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterUser"
+            android:exported="false" />
+        <activity
+            android:name=".InterestsSelection"
             android:exported="true" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".LoginUser"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-    
-</manifest>
+     
