--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -25,6 +25,17 @@
             android:name=".InterestsSelection"
             android:exported="true" />
         <activity
+            android:name=".Feed"
+            android:exported="true"/>
+        <activity
             android:name=".LoginUser"
             android:exported="true">
-     
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
+</manifest>
