--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".RegisterUser"
             android:exported="false" />
         <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+        <activity
             android:name=".LoginUser"
             android:exported="true">
             <intent-filter>
