--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         android:name=".MainActivity"
         android:exported="true"/>
         <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+        <activity
             android:name=".LoginUser"
             android:exported="true">
             <intent-filter>
