--- a/UniVerse/app/build.gradle
+++ b/UniVerse/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
     testImplementation 'junit:junit:4.13.2'
