--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.universe">
-    
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,38 +10,41 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniVerse">
         <activity
-        android:name=".RegisterStudentInfo"
-        android:exported="true" />
+            android:name=".Notification"
+            android:exported="false" />
         <activity
-        android:name=".ForgotPassword"
-        android:exported="false" />
+            android:name=".RegisterStudentInfo"
+            android:exported="true" />
         <activity
-        android:name=".PlaceHolderFeed"
-        android:exported="false" />
+            android:name=".ForgotPassword"
+            android:exported="false" />
         <activity
-        android:name=".RegisterUser"
-        android:exported="false" />
+            android:name=".PlaceHolderFeed"
+            android:exported="false" />
         <activity
-        android:name=".InterestsSelection"
-        android:exported="true" />
+            android:name=".RegisterUser"
+            android:exported="false" />
         <activity
-        android:name=".Feed"
-        android:exported="true"/>
+            android:name=".InterestsSelection"
+            android:exported="true" />
         <activity
-        android:name=".CreateEvent"
-        android:exported="true"/>
+            android:name=".Feed"
+            android:exported="true" />
         <activity
             android:name=".CreateEvent"
-            android:exported="true"/>
+            android:exported="true" />
+        <activity
+            android:name=".CreateEvent"
+            android:exported="true" />
         <activity
             android:name=".LoginUser"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-    
+
 </manifest>
