--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -33,6 +33,30 @@
             android:name=".CreateEvent"
             android:exported="true" />
         <activity
+            android:name=".EventInfo"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterStudentInfo"
+            android:exported="true" />
+        <activity
+            android:name=".ForgotPassword"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterUser"
+            android:exported="false" />
+        <activity
+            android:name=".InterestsSelection"
+            android:exported="true" />
+        <activity
+            android:name=".Feed"
+            android:exported="true" />
+        <activity
+            android:name=".CreateEvent"
+            android:exported="true" />
+        <activity
+            android:name=".CreateEvent"
+            android:exported="true" />
+        <activity
             android:name=".LoginUser"
             android:exported="true">
             <intent-filter>
