--- a/UniVerse/app/build.gradle
+++ b/UniVerse/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.preference:preference:1.2.0'
 
 
     testImplementation 'junit:junit:4.13.2'
