--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -35,26 +35,7 @@
         <activity
             android:name=".EventInfo"
             android:exported="false" />
-        <activity
-            android:name=".RegisterStudentInfo"
-            android:exported="true" />
-        <activity
-            android:name=".ForgotPassword"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterUser"
-            android:exported="false" />
-        <activity
-            android:name=".InterestsSelection"
-            android:exported="true" />
-        <activity
-            android:name=".Feed"
-            android:exported="true" />
-        <activity
-            android:name=".CreateEvent"
-            android:exported="true" />
-        <activity
-            android:name=".CreateEvent"
+        <activity android:name=".EditEvent"
             android:exported="true" />
         <activity
             android:name=".LoginUser"
