--- a/UniVerse/app/src/main/AndroidManifest.xml
+++ b/UniVerse/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.universe">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,10 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UniVerse">
+        android:theme="@style/Theme.UniVerse"
+        android:name=".App">
         <activity
             android:name=".NotificationFragment"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".RegisterStudentInfo"
             android:exported="true" />
