--- a/UniVerse/app/build.gradle
+++ b/UniVerse/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.work:work-runtime:2.7.1'
 
 
     testImplementation 'junit:junit:4.13.2'
